manifests/base/ocis/deploy-ocis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocis
  namespace: ocis
  labels:
    app: ocis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocis
  template:
    metadata:
      labels:
        app: ocis
    spec:
      securityContext:
        runAsUser: 61004
        runAsGroup: 61004
        fsGroup: 61004
      containers:
        - name: ocis
          image: ocis-image
          command:
            - "/bin/sh"
            - "-c"
            - "ocis init || true; exec ocis server" # TODO: cleaner init container
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 2000m
              memory: 2.5Gi
          ports:
            - name: grpc
              containerPort: 9142
            - name: api
              containerPort: 9233
            - name: web
              containerPort: 9200
          #readinessProbe:  # TODO: work on probes
          #  httpGet:
          #    path: /health/ready
          #    port: 9000
          #  initialDelaySeconds: 30
          volumeMounts:
            - mountPath: /etc/ocis
              name: ocis-config
            - mountPath: /var/lib/ocis
              name: ocis-data
            - mountPath: /etc/ssl/certs/Internal_CA.crt
              name: domain-tls
              subPath: ca.crt
      volumes:
        - name: ocis-init-config
          configMap:
            name: ocis-config
        - name: ocis-data
          persistentVolumeClaim:
            claimName: ocis-data
        - name: ocis-config
          persistentVolumeClaim:
            claimName: ocis-config
        - name: domain-tls
          secret:
            secretName: domain-tls
